# Rust-Ethereum-Wallet

./: .gitignore  package.json
src/: App.jsx
src-tauri/: .gitignore  Cargo.toml  data.json  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/ethereum/: account.rs  address.rs  connect.rs  hd_tree.rs  key_pair.rs  mod.rs  seed.rs  wallet.rs
